# locksun

./: .gitignore  Cargo.toml  README.md  WEBVIEW-SKILL-SETUP.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/instructions/: commands.instructions.md  config.instructions.md  frontend.instructions.md  lockscreen.instructions.md  playwright-webview.instructions.md  renderer.instructions.md  scheduler.instructions.md  sun.instructions.md  testing.instructions.md
.github/prompts/: add-render-layer.prompt.md  add-tauri-command.prompt.md
.github/workflows/: ci.yml  release.yml
config/: default_settings.toml
src/: main.ts
src-tauri/: Cargo.toml  build.rs  locksun.exe.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: user_settings.toml  user_settings.toml.example
src-tauri/examples/: generate_gemini_test.rs  generate_test_image.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs  types.rs
src-tauri/src/gemini/: client.rs  mod.rs  types.rs
src-tauri/src/lockscreen/: mod.rs
src-tauri/src/renderer/: composer.rs  mod.rs  palette.rs  preetham.rs  sky.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/sun/: calculator.rs  mod.rs  types.rs
src-tauri/tests/: sun_calculator_test.rs
src/api/: tauri_commands.ts
src/debug/: ipc-test.ts
src/pages/: settings.ts
src/styles/: main.css
src/utils/: tauri-init.ts
tests/: sun_calculator_test.rs
tests/e2e/: agent-check.spec.ts  app.spec.ts  webview-check.js  webview-helpers.ts
