[workspace]
resolver = "2"

members = ["src-tauri"]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["locksun"]
description = "Windows lock screen solar simulation"

# 共通の依存関係バージョンを統一管理
[workspace.dependencies]
# 時刻・日付
chrono = { version = "0.4", features = ["serde"] }

# 画像処理
image = { version = "0.25", default-features = false, features = [
	"png",
	"jpeg",
] }

# シリアライゼーション
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# base64 エンコード
base64 = "0.22"

# パス解決
dirs = "5"

# ロギング
log = "0.4"
env_logger = "0.11"

# エラーハンドリング
thiserror = "2"
anyhow = "1"

# HTTP クライアント（Gemini API 呼び出し用）
reqwest = { version = "0.12", features = ["json"] }
