[package]
name = "locksun"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "locksun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
	"tray-icon",
	"image-ico",
	"image-png",
	"test",
] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# 時刻・日付
chrono.workspace = true

# 画像生成
image.workspace = true

# base64 エンコード（プレビュー画像転送用）
base64.workspace = true

# パス解決
dirs.workspace = true

# ロギング
log.workspace = true
env_logger.workspace = true

# エラーハンドリング
thiserror.workspace = true
anyhow.workspace = true

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# HTTP クライアント（Gemini API 通信用）
reqwest = { version = "0.12", features = ["json"] }

[[example]]
name = "generate_test_image"
path = "examples/generate_test_image.rs"

[[example]]
name = "generate_gemini_test"
path = "examples/generate_gemini_test.rs"

# Windows API
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
strip = true
